--- a/Lab2_SpellChecker/.project
+++ b/Lab2_SpellChecker/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lab2_SpellChecker</name>
+	<name>SpellChecker</name>
 	<comment></comment>
 	<projects>
 	</projects>
